Fixing weird overflow issue on committees

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -92,3 +92,8 @@
   }
 }
 
+// Class applied to candidate and committee pages with tabs
+.tab-interface {
+  overflow-x: hidden;
+  position: relative;
+}
